--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,7 @@ body .container {
   position: absolute;
   bottom: -280px;
   right: 0;
+  z-index: 9999;
   background: #fff;
   border-radius: 15px;
   padding: 20px;
@@ -2343,7 +2344,7 @@ body .container {
     right: 50%;
     -webkit-transform: translateX(50%);
     transform: translateX(50%);
-    width: 85%;
+    width: 65%;
   }
 
   .header-promo .container .header-promo-top .header-promo-top-reg .header-popup-login::after {
@@ -2724,6 +2725,10 @@ body .container {
     margin-bottom: 20px;
     margin-right: 10px;
     margin-left: 10px;
+  }
+
+  .header-promo .container .header-promo-top .header-promo-top-reg .header-popup-login {
+    width: 90%;
   }
 
   .header-promo .container .header-promo-bottom .header-promo-bottom-left h1 {
