--- a/css/style.css
+++ b/css/style.css
@@ -522,8 +522,8 @@ body .container {
   font-weight: 700;
   font-size: 19px;
   color: #08364c;
-  /*-webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);*/
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   background: #fff url(../img/our-ways-plus-icon2.png) 95% 50% no-repeat;
   padding: 20px 70px 20px 20px;
   margin-bottom: 30px;
@@ -1049,7 +1049,7 @@ body .container {
   -ms-flex-align: center;
   align-items: center;
   background: #6292f5;
-  padding: 15px 20px;
+  padding: 20px 40px;
   position: relative;
 }
 
@@ -1098,7 +1098,7 @@ body .container {
   -ms-flex-align: center;
   align-items: center;
   background: #6292f5;
-  padding: 15px 20px;
+  padding: 20px 40px;
   margin-top: auto;
   position: relative;
 }
@@ -1140,14 +1140,11 @@ body .container {
 .statistic .container .statistic-list .statistic-right {
   -ms-flex-preferred-size: 56%;
   flex-basis: 56%;
-
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
 }
 
 .statistic .container .statistic-list .statistic-right .statistic-right-top {
   padding: 40px;
+  position: relative;
 }
 
 .statistic .container .statistic-list .statistic-right .statistic-right-top p {
@@ -1156,6 +1153,18 @@ body .container {
   font-size: 15px;
   color: #08364c;
   margin-bottom: 40px;
+}
+
+.statistic .container .statistic-list .statistic-right .statistic-right-top:after {
+  content: '';
+  position: absolute;
+  top: -22px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  background: url(../img/statistic-icon4.png) 0 0 no-repeat;
+  width: 647px;
+  height: 20px;
 }
 
 .statistic .container .statistic-list .statistic-right .statistic-right-top .statistic-right-top-list {
@@ -1258,20 +1267,6 @@ body .container {
   background: url(../img/statistic-bg.jpg) 50% 0 no-repeat;
   background-size: cover;
   position: relative;
-
-  position: relative;
-}
-
-.statistic .container .statistic-list .statistic-right .statistic-right-bottom:before {
-  content: '';
-  position: absolute;
-  top: -20px;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-  transform: translateX(-50%);
-  background: url(../img/statistic-icon4.png) 0 0 no-repeat;
-  width: 647px;
-  height: 20px;
 }
 
 .statistic .container .statistic-list .statistic-right .statistic-right-bottom::after {
@@ -1282,7 +1277,7 @@ body .container {
   transform: translateX(-50%);
   top: -1px;
   border: 10px solid transparent;
-  border-top: 10px solid #F5F6F9;
+  border-top: 10px solid #fff;
 }
 
 .statistic .container .statistic-list .statistic-right .statistic-right-bottom .statistic-right-bottom-left,
@@ -1755,15 +1750,15 @@ body .container {
   text-align: center;
   padding: 170px 30px 40px;
   margin-bottom: 30px;
-
-  transition: all .5s;
+  -webkit-transition: all .4s;
+  transition: all .4s;
 }
 
 .why-icon .container .why-icon-list .why-icon-item:nth-child(1):hover {
   padding: 160px 30px 50px;
-
-  background: url(../img/why-icon-icon1h.png) 50% 50px no-repeat, -webkit-gradient(linear, left top, left bottom, from(#59c3f8), to(#367eee));
-  background: url(../img/why-icon-icon1h.png) 50% 50px no-repeat, linear-gradient(to bottom, #59c3f8, #367eee);
+  -webkit-box-shadow: inset 0 0 150px 100px #3780EE;
+  box-shadow: inset 0 0 150px 100px #3780EE;
+  background: url(../img/why-icon-icon1h.png) 50% 50px no-repeat;
 }
 
 .why-icon .container .why-icon-list .why-icon-item:nth-child(1):hover h2 {
@@ -1776,9 +1771,9 @@ body .container {
 
 .why-icon .container .why-icon-list .why-icon-item:nth-child(2):hover {
   padding: 160px 30px 50px;
-
-  background: url(../img/why-icon-icon2h.png) 50% 50px no-repeat, -webkit-gradient(linear, left top, left bottom, from(#59c3f8), to(#367eee));
-  background: url(../img/why-icon-icon2h.png) 50% 50px no-repeat, linear-gradient(to bottom, #59c3f8, #367eee);
+  -webkit-box-shadow: inset 0 0 150px 100px #3780EE;
+  box-shadow: inset 0 0 150px 100px #3780EE;
+  background: url(../img/why-icon-icon2h.png) 50% 50px no-repeat;
 }
 
 .why-icon .container .why-icon-list .why-icon-item:nth-child(2):hover h2 {
@@ -1791,9 +1786,9 @@ body .container {
 
 .why-icon .container .why-icon-list .why-icon-item:nth-child(3):hover {
   padding: 160px 30px 50px;
-
-  background: url(../img/why-icon-icon3h.png) 50% 50px no-repeat, -webkit-gradient(linear, left top, left bottom, from(#59c3f8), to(#367eee));
-  background: url(../img/why-icon-icon3h.png) 50% 50px no-repeat, linear-gradient(to bottom, #59c3f8, #367eee);
+  -webkit-box-shadow: inset 0 0 150px 100px #3780EE;
+  box-shadow: inset 0 0 150px 100px #3780EE;
+  background: url(../img/why-icon-icon3h.png) 50% 50px no-repeat;
 }
 
 .why-icon .container .why-icon-list .why-icon-item:nth-child(3):hover h2 {
@@ -1806,9 +1801,9 @@ body .container {
 
 .why-icon .container .why-icon-list .why-icon-item:nth-child(4):hover {
   padding: 160px 30px 50px;
-
-  background: url(../img/why-icon-icon4h.png) 50% 50px no-repeat, -webkit-gradient(linear, left top, left bottom, from(#59c3f8), to(#367eee));
-  background: url(../img/why-icon-icon4h.png) 50% 50px no-repeat, linear-gradient(to bottom, #59c3f8, #367eee);
+  -webkit-box-shadow: inset 0 0 150px 100px #3780EE;
+  box-shadow: inset 0 0 150px 100px #3780EE;
+  background: url(../img/why-icon-icon4h.png) 50% 50px no-repeat;
 }
 
 .why-icon .container .why-icon-list .why-icon-item:nth-child(4):hover h2 {
@@ -1821,9 +1816,9 @@ body .container {
 
 .why-icon .container .why-icon-list .why-icon-item:nth-child(5):hover {
   padding: 160px 30px 50px;
-
-  background: url(../img/why-icon-icon5h.png) 50% 50px no-repeat, -webkit-gradient(linear, left top, left bottom, from(#59c3f8), to(#367eee));
-  background: url(../img/why-icon-icon5h.png) 50% 50px no-repeat, linear-gradient(to bottom, #59c3f8, #367eee);
+  -webkit-box-shadow: inset 0 0 150px 100px #3780EE;
+  box-shadow: inset 0 0 150px 100px #3780EE;
+  background: url(../img/why-icon-icon5h.png) 50% 50px no-repeat;
 }
 
 .why-icon .container .why-icon-list .why-icon-item:nth-child(5):hover h2 {
@@ -1836,9 +1831,9 @@ body .container {
 
 .why-icon .container .why-icon-list .why-icon-item:nth-child(6):hover {
   padding: 160px 30px 50px;
-
-  background: url(../img/why-icon-icon6h.png) 50% 50px no-repeat, -webkit-gradient(linear, left top, left bottom, from(#59c3f8), to(#367eee));
-  background: url(../img/why-icon-icon6h.png) 50% 50px no-repeat, linear-gradient(to bottom, #59c3f8, #367eee);
+  -webkit-box-shadow: inset 0 0 150px 100px #3780EE;
+  box-shadow: inset 0 0 150px 100px #3780EE;
+  background: url(../img/why-icon-icon6h.png) 50% 50px no-repeat;
 }
 
 .why-icon .container .why-icon-list .why-icon-item:nth-child(6):hover h2 {
@@ -2396,12 +2391,12 @@ body .container {
     padding: 20px;
   }
 
-  .statistic .container .statistic-list .statistic-right .statistic-right-bottom {
-    padding: 30px;
+  .statistic .container .statistic-list .statistic-right .statistic-right-top:after {
+    display: none;
   }
 
-  .statistic .container .statistic-list .statistic-right .statistic-right-bottom:before {
-    display: none;
+  .statistic .container .statistic-list .statistic-right .statistic-right-bottom {
+    padding: 30px;
   }
 
   .header-promo .container .header-promo-bottom-contacts {
