--- a/1/css/style.css
+++ b/1/css/style.css
@@ -230,6 +230,32 @@ body .container {
   transform: translateX(-50%);
 }
 
+.social-link {
+  position: fixed;
+  z-index: 10;
+  top: 35%;
+  left: 0;
+  width: 60px;
+}
+
+.social-link a {
+  display: block;
+  margin-bottom: 5px;
+  padding: 8px 8px 8px 3px;
+  background: -webkit-gradient(linear, left top, left bottom, from(#f5efb1), to(#cc9d43));
+  background: linear-gradient(to bottom, #f5efb1, #cc9d43);
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 30px;
+  text-align: center;
+}
+
+.social-link a img {
+  width: 40px;
+  height: 30px;
+  -webkit-filter: grayscale(160%);
+  filter: grayscale(160%);
+}
+
 .exchange {
   padding: 10px 0 10px;
   text-align: center;
